Center geolocate text on smaller screens. Fixes #521

--- a/app/assets/stylesheets/partials/_grid.scss
+++ b/app/assets/stylesheets/partials/_grid.scss
@@ -59,6 +59,9 @@
         text-align: center;
         width: 100%;
       }
+      #geolocate {
+        display: inline-block;
+      }
       .inline-hints {
         margin-left: 0;
       }
